2009-01-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.c: Activate the action in a regular clicked
	handler instead of the default handler, to make it work with
	derived classes which don't chain up their clicked handler.

2009-01-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 569104 – Toggle menu entries showed as check menu entries 
	in nautilus

	* gtk/gtkactivatable.c (gtk_activatable_do_set_related_action):
	Block the previous action when calling reset() to prevent
	accidental activation of the previous action.

	* gtk/gtkaction.c (gtk_action_activate): Don't compare booleans.

	* gtk/gtktoggleaction.c (gtk_toggle_action_set_active): Remove
	extraneous braces.

2009-01-26  Bastien Nocera  <hadess@hadess.net>

	Bug 569240 - Crasher when using markers

	* gtk/gtkrange.c (gtk_range_destroy): Avoid crashes when destroying
	a GtkRange with markers

2009-01-26  Richard Hult  <richard@imendio.com>

	Bug 566628 – gdk_display_close always asserts on win32 and quartz

	* gdk/quartz/gdkdisplay-quartz.c
	(_gdk_windowing_set_default_display): Copy fix for bug #566628
	from the win32 backend: Allow also a NULL parameter in the
	g_assert().

2009-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoolitem.[hc]: Export the function to create a proxy
	menuitem from the action for use in subclasses.

	* gtk/gtktoolbutton.c:
	* gtk/gtktoggletoolbutton.c: Use it here.

	* gtk/gtkrecentchoosermenu.c: Avoid temporary empty state that
	can lead to a recent action proxy menu being erroneously hidden.

2009-01-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkradioaction.c: Set draw-as-radio to TRUE.

2009-01-24  Matthias Clasen  <mclasen@redhat.com>

	Revert changes for bug 567124. Instead of trying to avoid
	setting up the im context before the widget is realized, just
	reset it when the client window is set.

	* gtk/gtkimmulticontext.c: Reset the slave when a client window
	is set.

	* gtk/gtkimmodule.c
	* gtk/gtktextview.c: Revert changes for bug 567124.
