@@ -2041,6 +2041,8 @@ gtk_image_menu_item_new_with_label
 gtk_image_menu_item_new_with_mnemonic
 gtk_image_menu_item_get_use_stock
 gtk_image_menu_item_set_use_stock
+gtk_image_menu_item_get_always_show_image
+gtk_image_menu_item_set_always_show_image
 gtk_image_menu_item_set_accel_group
 <SUBSECTION Standard>
 GtkImageMenuItemClass
