@@ -1,3 +1,7 @@
+2009-01-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Add new image menu item api
+
 2009-01-23  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.15.1 ===
